# JniDemo

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/gxd/demo/jni/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
